--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ djangorestframework==3.2.2      # API v2
 django-filter==0.11.0           # Filtering for DRF
 python-memcached==1.53          # Memcache. Used by Mailinglists to fetch from Sympa.
 markdown2==2.3.0                # textarea text formatting
-pytz                            # Timezone lib. Obsolete?
+pytz                            # Timezone lib
 icalendar==3.8.4
 stripe==1.20.2
 
@@ -43,7 +43,3 @@ git+https://github.com/django-wiki/django-wiki.git@adb4e2ea21745da40d8c123ce7a36
 # imagemagick                   # From package repository. Tested with version == 8:6.7.7.10.
 # libjpeg-dev					# From package repository.
 # libpq-dev						# From package repository.
-
-# To be removed
-# wsgiref==0.1.2
-# werkzeug==0.10.4
