--- a/requirements.txt
+++ b/requirements.txt
@@ -39,6 +39,7 @@ werkzeug==0.10.4
 cov-core==1.7
 coverage==3.5.2
 django-nose>=1.4,<1.5
+coverage==3.5.2
 factory-boy==1.1.3
 lettuce==0.2.20
 nose==1.3.4
